[gd_scene load_steps=14 format=3 uid="uid://b8vx2rhbeu1mu"]

[ext_resource type="Script" path="res://cats/pau/gatoPau.gd" id="1_75ibh"]
[ext_resource type="Texture2D" uid="uid://bcodjyhjsb2db" path="res://assets/cats/gatoPau.png" id="2_wovh3"]
[ext_resource type="Script" path="res://cats/pau/Porrada.gd" id="3_qyur0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w6kgl"]
atlas = ExtResource("2_wovh3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv3bs"]
atlas = ExtResource("2_wovh3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4kq8"]
atlas = ExtResource("2_wovh3")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdqvd"]
atlas = ExtResource("2_wovh3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjacr"]
atlas = ExtResource("2_wovh3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrtcv"]
atlas = ExtResource("2_wovh3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o2fqj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6kgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv3bs")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4kq8")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdqvd")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjacr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrtcv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgo47"]
size = Vector2(25.5, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhufm"]
size = Vector2(34, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oa5dm"]
size = Vector2(34, 22)

[node name="Gato" type="Area2D"]
script = ExtResource("1_75ibh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(17, 6)
sprite_frames = SubResource("SpriteFrames_o2fqj")
animation = &"idle"
autoplay = "idle"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(16.75, 12)
shape = SubResource("RectangleShape2D_dgo47")
debug_color = Color(0.846966, 0.376408, 3.85046e-07, 0.42)

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(17, 12)
shape = SubResource("RectangleShape2D_vhufm")
debug_color = Color(0, 0.590072, 0.753842, 0.42)

[node name="Porrada" type="Area2D" parent="."]
script = ExtResource("3_qyur0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Porrada"]
position = Vector2(17, 12)
shape = SubResource("RectangleShape2D_oa5dm")
debug_color = Color(0.724584, 0.00248066, 0.940573, 0.42)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
